date overlap glitch fix

--- a/src/styles/ChatMessage.scss
+++ b/src/styles/ChatMessage.scss
@@ -56,6 +56,7 @@
   padding: 0.75rem 1rem;
   border-radius: 10px;
   word-wrap: break-word;
+  min-width: 65px;
   max-width: min(90%, 800px);
   letter-spacing: 0.1px;
   padding-bottom: 2rem;
